WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
124489
REGRESSION(
r158821
): [GTK] API break due to removed properties in GObject DOM bindings
https://bugs.webkit.org/show_bug.cgi?id=124489
Summary
REGRESSION(r158821): [GTK] API break due to removed properties in GObject DOM...
Carlos Garcia Campos
Reported
2013-11-18 02:49:14 PST
In
r158821
, several properties were changed from readonly to CustomSetter. The GObject DOM bindings currently skips any attribute having a custom getter or setter, and those properties are not generated anymore.
Attachments
Patch
(8.09 KB, patch)
2013-11-18 02:54 PST
,
Carlos Garcia Campos
pnormand
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2013-11-18 02:54:09 PST
Created
attachment 217185
[details]
Patch
Carlos Garcia Campos
Comment 2
2013-11-18 03:03:37 PST
Committed
r159411
: <
http://trac.webkit.org/changeset/159411
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug